--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="Content-Security-Policy" content="default-src * self blob: data: gap:; style-src * self 'unsafe-inline' blob: data: gap:; script-src * 'self' 'unsafe-eval' 'unsafe-inline' blob: data: gap:; object-src * 'self' blob: data: gap:; img-src * self 'unsafe-inline' blob: data: gap:; connect-src self * 'unsafe-inline' blob: data: gap:; frame-src * self blob: data: gap:;">
     <title>Sounds of the DLR</title>
-    <script type="module" crossorigin src="/assets/index.f6b1be66.js"></script>
-    <link rel="stylesheet" href="/assets/index.9f93dbf2.css">
+    <script type="module" crossorigin src="./assets/index.f6b1be66.js"></script>
+    <link rel="stylesheet" href="./assets/index.9f93dbf2.css">
   </head>
   <body>
     <div id="app"></div>
