--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./vite.svg" />
+    <link rel="manifest" href="manifest.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <title>Sounds of the DLR</title>
-    <script type="module" crossorigin src="./assets/index.8f5b0266.js"></script>
-    <link rel="stylesheet" href="./assets/index.85df8307.css">
+    <script type="module" crossorigin src="./assets/index.c9a6452e.js"></script>
+    <link rel="stylesheet" href="./assets/index.e23cbbef.css">
   </head>
   <body>
     <div id="app"></div>
