--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
+    <link rel="icon" type="image/png" href="./icon.ico" />
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <title>Sounds of the DLR</title>
-    <script type="module" crossorigin src="./assets/index.5015cb4f.js"></script>
-    <link rel="stylesheet" href="./assets/index.1d14207f.css">
+    <script type="module" crossorigin src="./assets/index.30067bcc.js"></script>
+    <link rel="stylesheet" href="./assets/index.f7dfcfa4.css">
   </head>
   <body>
     <div id="app"></div>
