Add OG tags, monsters queue, adjust immersion mode

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/png" href="/icon.ico" />
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <meta property="og:url" content="https://cabalex.github.io/dlr-sounds/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Sounds of the DLR">
+    <meta property="og:description" content="Immerse yourself in the sounds of the Anaheim parks!">
+    <meta property="og:image" content="https://cabalex.github.io/dlr-sounds/thumb.png">
     <title>Sounds of the DLR</title>
   </head>
   <body>
